//
// Copyright 2022 DXOS.org
//

syntax = "proto3";

import "dxos/schema.proto";

package dxos.experimental.kai.sandbox;

// TODO(burdon): Rename.
message Frame {
  option (object) = true;

  string name = 1;
  dxos.schema.Text content = 2;
  Artifact compiled = 3;
}

message Artifact {
  message Import {
    string module_url = 1;

    repeated string named_imports = 2;
    bool default_import = 3;
  }

  bytes sourceHash = 1;
  string bundle = 2;
  repeated Import imports = 3;
}
